Fix sidenav appearing translucent on mobile

--- a/styles/_chameleon.scss
+++ b/styles/_chameleon.scss
@@ -51,7 +51,7 @@
     background-color: $colorWhite;
     color: $colorBlack;
 
-    .navBar, .footer, .sidebar {
+    .navBar, .footer {
       background-color: $colorTransparentWhite;
     }
 
